# machine-health-check-operator

./: .gitignore  BUILD  Makefile  README.md  WORKSPACE  bazel-bin  bazel-machine-health-check-operator  bazel-out  bazel-testlogs  go.mod  go.sum
cmd/machine-health-check-operator/: BUILD.bazel  client_builder.go  controller_context.go  main.go  start.go  version.go
hack/: common.sh  dockerized  print-workspace-status.sh  version.sh
hack/bazel/: fmt.sh
hack/builder/: Dockerfile  build.sh  publish.sh  rsyncd.conf
pkg/operator/: BUILD.bazel  config.go  config_test.go  operator.go  operator_test.go  status.go  status_test.go  sync.go
pkg/version/: BUILD.bazel  def.bzl
tools/components/: BUILD.bazel
tools/manifest-templator/: BUILD.bazel
tools/resource-generator/: BUILD.bazel  resource-generator.go
tools/utils/: BUILD.bazel  marshaller_test.go
